# minesweeper

./: .gitignore  CMakeLists.txt  README.md  doxyfile  doxygen_log.txt  help.txt  notes.md
databank/: [20;5~saif.txt  hafsa.txt  saif.txt  sarah.txt
minespr_databank/: rahman.txt  saif.txt  sif.txt
src/: main.c  makefile
src/lib/: sayBismillah.c  sayBismillah.h  winfuncs.c  winfuncs.h
src/lib/board/: board.c  board.h  board_variables.c  board_variables.h
src/lib/boards/: board.c  board.h  board_variables.c  board_variables.h
src/lib/converter/: strtoint.c  strtoint.h
src/lib/maintask/: board.c  board.h
src/lib/player/: player.c  player.h  player_profile.c  player_profile.h
src/lib/playing_board/: board.c  board.h
src/lib/service/converter/: strtoint.c  strtoint.h
src/lib/service/get/: getopt.c  getpath.c  getservice.h  loadgame.c  loadplayer.c
src/lib/service/set/: setboard.c  setparam.c  setservice.h
src/lib/service/setget/: getopt.c  getpath.c  loadplayer.c  setboard.c  setget.h  setparam.c
src/lib/utilities/: adjacent_cells.c  adjacent_cells.h  game_util.c  game_util.h  mines_util.c  mines_util.h  neighbor_cells.c  neighbor_cells.h  neighbor_util.c  neighbor_util.h  play_game.c  play_game.h  playing_util.c  playing_util.h  string_util.c  string_util.h
src/lib/validators/: validators.c  validators.h
